--- a/src/app/business/video-group/video-group.component.html
+++ b/src/app/business/video-group/video-group.component.html
@@ -11,7 +11,7 @@
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
     <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
-    <input pInputText id="addAreaName" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+    <input pInputText id="addAreaName" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="this.addArealabel" placeholder="请选择区域..."/>
     <label for="addServiceAreaName" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
     <p-dropdown id="addServiceAreaName" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."  [(ngModel)]="this.ServiceName"></p-dropdown>
     <label for="highDirec2" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
@@ -49,7 +49,7 @@
           <label for="addAreaName">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName2" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+          <input pInputText id="addAreaName2" (click)="AreaTreeClick()" [(ngModel)]="this.addArealabel" />
         </div>
       </div>
       <div class="ui-g-6">
@@ -131,7 +131,7 @@
           <label for="addAreaName">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+          <input pInputText id="addAreaName1" (click)="AreaTreeClick()" [(ngModel)]="this.modifyVideoGroup.administrativeAreaName" />
         </div>
       </div>
       <div class="ui-g-6">
@@ -139,7 +139,7 @@
           <label for="addServiceAreaName1">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown #modifySer id="addServiceAreaName1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
+          <p-dropdown #modifySer id="addServiceAreaName1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyserviceAreaName" ></p-dropdown>
         </div>
       </div>
       <div class="ui-g-6">
@@ -147,7 +147,7 @@
           <label for="highDirec1">上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown #modifyDirec id="highDirec1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..." ></p-dropdown>
+          <p-dropdown #modifyDirec id="highDirec1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyOrientationName" ></p-dropdown>
         </div>
       </div>
       <div class="ui-g-6">
