--- a/src/app/business/area/area.component.html
+++ b/src/app/business/area/area.component.html
@@ -34,7 +34,7 @@
     </p-treeTable>
   </p-scrollPanel>
   <!--增加弹框-->
-  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="600">
+  <p-dialog header="增加信息" [(visible)]="addDialog" [responsive]="true" showEffect="fade" [modal]="true" [width]="600" (onHide)="clearData()">
     <div class="ui-g ui-fluid">
       <!--区域名称-->
       <div class="ui-g-12">
@@ -42,7 +42,7 @@
           <label for="addAreaName">区域名称</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName" (click)="treeAreaClick()" [(ngModel)]="addArea.areaName" />
+          <input pInputText id="addAreaName" (click)="treeAreaClick()" [(ngModel)]="addArea.areaName"  />
         </div>
       </div>
       <!--区域编码-->
