--- a/src/app/business/wifi/wifi.component.html
+++ b/src/app/business/wifi/wifi.component.html
@@ -140,7 +140,7 @@
           <label for="addserviceArea1">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyWifi.serviceArea.serviceAreaName"></p-dropdown>
+          <p-dropdown id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyWifi.serviceArea.serviceName"></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -149,7 +149,7 @@
           <label for="addsaOrientation1">上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
+          <p-dropdown #addsaOrientation1 id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
         </div>
       </div>
       <!--设备编号-->
