--- a/src/app/business/intercept/intercept.component.html
+++ b/src/app/business/intercept/intercept.component.html
@@ -151,7 +151,7 @@
           <label for="addserviceArea1">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown #addserviceArea1 id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyIntercept.serviceAreaName"></p-dropdown>
+          <p-dropdown #serviceArea1 id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyIntercept.serviceAreaName"></p-dropdown>
         </div>
       </div>
       <!--上下行-->
@@ -160,7 +160,7 @@
           <label for="addsaOrientation1">上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown #addsaOrientation1 id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
+          <p-dropdown #saOrientation1 id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
         </div>
       </div>
       <!--卡口编号-->
