--- a/src/app/business/store/store.component.html
+++ b/src/app/business/store/store.component.html
@@ -28,7 +28,7 @@
 
   <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
     <!--数据-->
-    <p-table [columns]="cols" [value]="stores" selectionMode="multiple" [(selection)]="selectedstores" (onRowSelect)="onRowSelect($event)">
+    <p-table [columns]="columns" [value]="stores" selectionMode="multiple" [(selection)]="selectedstores" (onRowSelect)="onRowSelect($event)">
       <ng-template pTemplate="header" let-columns>
         <tr>
           <th *ngFor="let col of columns">
@@ -38,9 +38,11 @@
       </ng-template>
       <ng-template pTemplate="body" let-rowData let-columns="columns">
         <tr [pSelectableRow]="rowData">
-          <td *ngFor="let col of columns">
-            {{rowData[col.field]}}
-          </td>
+          <ng-container *ngFor="let col of columns">
+            <td>
+              {{rowData[col.field]}}
+            </td>
+          </ng-container>
         </tr>
       </ng-template>
     </p-table>
