--- a/src/app/business/intercept/intercept.component.html
+++ b/src/app/business/intercept/intercept.component.html
@@ -11,13 +11,13 @@
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
     <label for="addAreaName" style="margin-left: 1vw;font-size: 1.5rem">所属区划：</label>
-    <input pInputText id="addAreaName" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="this.addArealabel" placeholder="请选择区划..."/>
+    <input pInputText id="addAreaName" class="addAreaNameInput" (click)="SerchAreaTreeClick()" [(ngModel)]="this.SerchArealabel" placeholder="请选择区划..."/>
     <label for="addserviceArea" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
-    <p-dropdown id="addserviceArea" [options]="addServicesAreas" (onChange)="serviceChange($event)"  [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
+    <p-dropdown #SerchserviceArea id="addserviceArea" [options]="SerchServicesAreas" (onChange)="SerchserviceChange($event)"  [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
     <label for="addserviceArea" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
-    <p-dropdown id="addsaOrientation" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+    <p-dropdown #SerchsaOrientation id="addsaOrientation" [options]="SerchhighsdData" (onChange)="SerchdirectionChange($event)" [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
     <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">卡口类型：</label>
-    <p-dropdown id="addDep" [options]="this.bayonetTypes"  [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="label" placeholder="卡口类型..." [(ngModel)]="this.bayonetLabel" (onChange)="bayonetChange($event)"></p-dropdown>
+    <p-dropdown #Serchintercepttype id="addDep" [options]="this.bayonetTypes"  [style]="{'width':'7vw','margin-bottom':'3px'}" scrollHeight="100px" optionLabel="label" placeholder="卡口类型..." [(ngModel)]="this.bayonetLabel" (onChange)="bayonetChange($event)"></p-dropdown>
     <label for="addDep" style="margin-left: 0.5vw;font-size: 1.5rem">卡扣编号：</label>
     <input pInputText id="addAreaName" style="height: 3vh;width: 6vw" [(ngModel)]="this.queryIntercept.bayonetCode"/>
     <label for="addDep" style="margin-left:  0.5vw;font-size: 1.5rem">服务区名：</label>
@@ -196,6 +196,31 @@
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="modifySure()">确认</button>
         <button class="btn btn-warning" type="button" (click)="modifyDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
+  <!--条件查询区域弹框-->
+  <!--区域弹框-->
+  <p-dialog header="请选择区域" [(visible)]="SerchareaDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="SerchAreaTrees"
+            selectionMode="single"
+            [(selection)]="SerchAreaTree"
+            (onNodeSelect)="treeOnNodeSelect($event)"
+          >
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="SerchtreeSelectAreaClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="areaDialog=false">取消</button>
       </div>
     </p-footer>
   </p-dialog>
