--- a/src/app/business/store/store.component.html
+++ b/src/app/business/store/store.component.html
@@ -11,13 +11,13 @@
     <button class="btn btn-danger" type="button" (click)="deleteFirm()">删除</button>
     <button class="btn btn-success" type="button" (click)="modifyBtn()">修改</button>
     <label for="addAreaName2" style="margin-left: 0.5vw;font-size: 1.5rem">所属区化：</label>
-    <input pInputText id="addAreaName2" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="this.arealabel"/>
+    <input pInputText id="addAreaName2" class="addAreaNameInput" (click)="SerchAreaTreeClick()" [(ngModel)]="this.Sercharealabel"/>
     <label for="addserviceAreaId" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
-    <p-dropdown id="addserviceAreaId" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px" [options]="addServicesAreas" (onChange)="serviceChange($event)" optionLabel="name" placeholder="请选择服务区..." [(ngModel)]="this.ServiceDown"></p-dropdown>
+    <p-dropdown #Serchservice id="addserviceAreaId" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px" [options]="SerchServicesAreas" (onChange)="SerchserviceChange($event)" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
     <label for="addsaOrientationId" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
-    <p-dropdown id="addsaOrientationId" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px" [options]="highsdData" (onChange)="directionChange($event)"   optionLabel="name" placeholder="请选择高速方向..." [(ngModel)]="this.orientationDown"></p-dropdown>
+    <p-dropdown #SerchaOrientation id="addsaOrientationId" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px" [options]="SerchhighsdData" (onChange)="SerchdirectionChange($event)"   optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
     <label for="addstoreId" style="margin-left: 0.5vw;font-size: 1.5rem">店铺分类：</label>
-    <p-dropdown id="addstoreId" [options]="storeTypes" (onChange)="storeTypeChange($event)" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择店铺类型..." [(ngModel)]="this.StoreType"></p-dropdown>
+    <p-dropdown #Serchstore id="addstoreId" [options]="SerchstoreTypes" (onChange)="SerchstoreTypeChange($event)" [style]="{'width':'7vw','margin-bottom':'3px'}"  scrollHeight="120px"  optionLabel="name" placeholder="请选择店铺类型..." ></p-dropdown>
     <label for="addAreaName3" style="margin-left: 0.5vw;font-size: 1.5rem">商店名：</label>
     <input pInputText id="addAreaName3" style="height: 3vh;width: 6vw" [(ngModel)]="this.queryStroe.storeName"/>
     <label for="addAreaName4" style="margin-left:  0.5vw;font-size: 1.5rem">负责人：</label>
@@ -72,7 +72,7 @@
           <label for="addsaOrientationId1">上下行：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addsaOrientationId1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
+          <p-dropdown #addsaOrientation  id="addsaOrientationId1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
         </div>
       </div>
       <!--店铺分类-->
@@ -81,7 +81,7 @@
           <label for="addstoreId1">店铺分类：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addstoreId1" [options]="storeTypes" (onChange)="storeTypeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择店铺类型..."></p-dropdown>
+          <p-dropdown   #addstore    id="addstoreId1" [options]="storeTypes" (onChange)="storeTypeChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择店铺类型..."></p-dropdown>
         </div>
       </div>
       <!--合同开始日期-->
@@ -230,7 +230,7 @@
     <p-footer>
       <div class="ui-dialog-buttonpane ui-helper-clearfix">
         <button class="btn btn-success" type="button" (click)="addsSave()">保存</button>
-        <button class="btn btn-warning" type="button" (click)="addDialog=false">取消</button>
+        <button class="btn btn-warning" type="button" (click)="addHide()">取消</button>
       </div>
     </p-footer>
   </p-dialog>
@@ -447,4 +447,28 @@
     </p-footer>
   </p-dialog>
   <app-paging [option]="option" (pageClick)="nowpageEventHandle($event) "></app-paging>
+
+  <!--查询区域弹框-->
+  <p-dialog header="请选择区域" [(visible)]="SerchDialog" [responsive]="true" showEffect="fade" [maximizable]="true" [baseZIndex]="10000" [modal]="true" [width]="300" [height]="400">
+    <div class="ui-g ui-fluid">
+      <div class="ui-g-12">
+        <!--(onNodeUnselect)="nodeUnselect($event)"-->
+        <p-scrollPanel [style]="{width: '100%', height: '300px'}">
+          <p-tree
+            [value]="SerchAreaTrees"
+            selectionMode="single"
+            [(selection)]="SerchAreaTree"
+            (onNodeSelect)="treeOnNodeSelect($event)">
+          </p-tree>
+        </p-scrollPanel>
+      </div>
+    </div>
+    <p-footer>
+      <div class="ui-dialog-buttonpane ui-helper-clearfix">
+        <button class="btn btn-success" type="button" (click)="SerchtreeSelectAreaClick()">确定</button>
+        <button class="btn btn-warning" type="button" (click)="areaDialog=false">取消</button>
+      </div>
+    </p-footer>
+  </p-dialog>
+
 </div>
