--- a/src/app/business/intercept/intercept.component.html
+++ b/src/app/business/intercept/intercept.component.html
@@ -52,7 +52,7 @@
         <div class="ui-g-4">
           <label for="addAreaName">所属区划：</label>
         </div>
-        <div class="ui-g-8">
+        <div class="ui-g-8" >
           <input pInputText id="addAreaName" (click)="AreaTreeClick()" [(ngModel)]="this.addArealabel" placeholder="请选择区划..."/>
         </div>
       </div>
@@ -61,7 +61,7 @@
         <div class="ui-g-4">
           <label for="addserviceArea">所属服务区：</label>
         </div>
-        <div class="ui-g-8">
+        <div class="ui-g-8" style="line-height: 2vh">
           <p-dropdown #addserviceArea id="addserviceArea" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."></p-dropdown>
         </div>
       </div>
@@ -70,7 +70,7 @@
         <div class="ui-g-4">
           <label for="addsaOrientation">上下行：</label>
         </div>
-        <div class="ui-g-8">
+        <div class="ui-g-8" style="line-height: 2vh">
           <p-dropdown #addsaOrientation id="addsaOrientation" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" placeholder="请选择高速方向..."></p-dropdown>
         </div>
       </div>
@@ -150,7 +150,7 @@
         <div class="ui-g-4">
           <label for="addserviceArea1">所属服务区：</label>
         </div>
-        <div class="ui-g-8">
+        <div class="ui-g-8" style="line-height: 2vh">
           <p-dropdown #serviceArea1 id="addserviceArea1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" [placeholder]="this.modifyIntercept.serviceAreaName"></p-dropdown>
         </div>
       </div>
@@ -159,7 +159,7 @@
         <div class="ui-g-4">
           <label for="addsaOrientation1">上下行：</label>
         </div>
-        <div class="ui-g-8">
+        <div class="ui-g-8" style="line-height: 2vh">
           <p-dropdown #saOrientation1 id="addsaOrientation1" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'182px'}" scrollHeight="72px" optionLabel="name" [placeholder]="this.modifyhighsdData"></p-dropdown>
         </div>
       </div>
