--- a/src/app/business/store/store.component.html
+++ b/src/app/business/store/store.component.html
@@ -28,7 +28,7 @@
 
   <p-scrollPanel [style]="{width: 'auto', height: '60vh'}">
     <!--数据-->
-    <p-table [value]="stores" selectionMode="multiple" [(selection)]="selectedstores" (onRowSelect)="onRowSelect($event)">
+    <p-table [columns]="cols" [value]="stores" selectionMode="multiple" [(selection)]="selectedstores" (onRowSelect)="onRowSelect($event)">
       <ng-template pTemplate="header" let-columns>
         <tr>
           <th *ngFor="let col of columns">
